--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@ body{
   </head>
   <body>
 <pre class="terminal">
-  ------------------create a new repository on the command line----------------- 
+  <------------------create a new repository on the command line-----------------> 
   echo "# repository name" >> README.md  **>to creat README.md file
   git init >>initialized  Git repository    
   git add . >>to add all file in the repository
   git commit -m "first commit" >> to commit a message in the repository
   git remote add origin https://github.com/Shahriyar-abrar-himel/repository name.git >> to initialized the distribution of this repository
   git push -u origin main >> To push the repository             
-  -----------------push an existing repository from the command line------------------ 
+  <-----------------push an existing repository from the command line------------------> 
   git remote add origin https://github.com/Shahriyar-abrar-himel/repository.git>> to initialized the distribution of this repository
   git branch -M main>> To define the repository in main branch   
   git push -u origin main>> To push the repository 
-
+  <------------------------ Git push & git pull----------------------------------------->
   git diff >> to shown the difference between my code and the repository code whwn i write or change codes
+  git add . >>to add all file in the repository
   press (q)>> to quilt the changes
-   git add . >>to add all file in the repository
+  git push >> to push the main code in the repository
+  git pull >> to pull code from github repository
 
   </pre>  
 </body>
